vfr/grammar.js
    source_file: ($) =>
      repeat(choice($.formset_statement, $.typedef_definition, $._directive, $.statement, $.conditional_statement)),

    // --- formset: fields are comma-terminated with no semicolon; the
    // body (varstore/form/... statements) follows directly, closed by
    // `endformset;`. ------------------------------------------------
    formset_statement: ($) =>
      seq(
        "formset",
        // Per spec (2.4), every formset header field is `key = value`
        // (guid/title/help/classguid/class/subclass) -- never a bare
        // field. Critical: if a bare `$.field` alternative were allowed
        // here too, it would greedily consume the *body*'s first
        // statement keyword (e.g. `varstore`) as "just one more header
        // field" before backtracking could kick in, since both are
        // equally valid bare identifiers at that position.
        repeat(seq($.key_value_pair, ",")),
        repeat(choice($.statement, $.conditional_statement)),
        "endformset",
        ";",
      ),

    // A generic struct/union field-list typedef, e.g.
    // `typedef struct { UINT8 mField1; } MyIfrNVData;`. Field types/names
    // are just bare words -- not modeled member-by-member, since the
    // grammar's job here is recognizing the construct for highlighting,
    // not validating C struct syntax.
    typedef_definition: ($) =>
      seq(
        "typedef",
        choice("struct", "union"),
        optional(field("name", $.identifier)),
        "{",
        repeat($.struct_field),
        "}",
        field("alias", $.identifier),
        ";",
      ),

    struct_field: ($) =>
      seq(
        field("type", $.field),
        field("name", $.identifier),
        optional(seq("[", field("array_size", $.field), "]")),
        optional(seq(":", field("bitfield_size", $.field))),
        ";",
      ),

    // --- generic statement --------------------------------------------

    // `keyword`/`end_keyword` are `$.compound_word` (not `$.identifier`) for
    // the same lexer-tie reason as `key_value_pair.key`/`function_call.name`
    // above: right after a `formset` header, both "one more header
    // `key_value_pair`" and "start of the body's first `statement`" are
    // simultaneously viable, and a separate `identifier` token competing
    // with `compound_word` at that exact position forced the lexer to
    // commit to `identifier` (for `statement.keyword`) before the parser
    // could look ahead to see the header repeat had no `=` to offer,
    // producing hard parse errors on ordinary bodies like
    // `varstore VARIABLE_CLEANUP_DATA, varid = ...;`.
    // Header fields and nested body items are modeled as one flat,
    // unordered repeat rather than "header fields, then a `;`, then
    // nested statements" -- real bodies interleave them with no
    // consistent separator (`vfrStatementQuestionOptionList` mixes
    // semicolon-terminated `option ...;` items with comma-terminated
    // `default = ...,`/`value = ...,` items, and constructs like
    // `orderedlist` have no `;` at all between their header fields and
    // the first body item). Terminates on either a bare `;` (leaf, no
    // body) or `end_keyword ";"` (block). Every alternative starting
    // with a bare `compound_word` (`$.statement`, `$.field`,
    // `$.key_value_pair`'s key) competes at the same position -- GLR
    // explores all of them and keeps whichever leads to a clean parse,
    // covered by the `$.statement`/`$.field` conflict declarations.
    statement: ($) =>
      seq(
        field("keyword", $.compound_word),
        repeat(choice($.key_value_pair, $.conditional_statement, $.statement, $.function_call, $.field, ",")),
        choice(";", seq(field("end_keyword", $.compound_word), ";")),
      ),

    // `suppressif`/`disableif`/`grayoutif`/`inconsistentif`/`nosubmitif`/
    // `warningif` take a real boolean expression rather than comma fields
    // (spec 2.9, 2.11.6.1.1-7, 2.11.7.2-4). Two shapes exist in real files:
    // form/formset-level (`disableif expr; body* endif;`, trailing `;` on
    // both the condition and `endif`) and question-level, embedded
    // directly among an enclosing statement's comma fields (e.g. inside
    // `checkbox ... ,`), which take optional leading `prompt = ..., timeout
    // = ...,` fields and close on a bare `endif` with no trailing `;`.
    // Both trailing terminators are modeled as optional to cover both
    // shapes with one rule, consistent with this grammar's
    // highlighting-focused (not full-validation) scope.
    key_value_pair: ($) => seq(field("key", $.field), "=", field("value", $._expression)),

    // --- Preprocessor (a real C preprocessor pass runs before the VFR
    // compiler proper) --------------------------------------------------

    _directive: ($) =>
      choice($.include_directive, $.define_directive, $.ifdef_directive, $.ifndef_directive, $.else_directive, $.endif_directive, $.pragma_directive),

    // Path is either a quoted string (`"NVDataStruc.h"`) or an
    // angle-bracket system path (`<Uefi/UefiMultiPhase.h>`), same as C.
    include_directive: ($) => seq("#include", field("path", choice($.field, $.system_path))),

    system_path: (_$) => token(/<[^<>\r\n]*>/),

    // Value is optional (`#define FOO` alone, a flag define, is valid C
    // and appears in headers .vfr files pull in).
    define_directive: ($) =>
      seq("#define", field("name", $.identifier), optional(field("value", $._expression))),

    _expression: ($) =>
      choice(
        $.field,
        $.function_call,
        $.parenthesized_expression,
        $.unary_expression,
        $.ideqval_expression,
        $.ideqvallist_expression,
        $.map_expression,
        $.binary_expression,
        $.ternary_expression,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    function_call: ($) =>
      seq(
        field("name", $.compound_word),
        "(",
        optional(
          seq(
            field("argument", choice($.key_value_pair, $._expression)),
            repeat(seq(",", field("argument", choice($.key_value_pair, $._expression)))),
          ),
        ),
        ")",
      ),

    binary_expression: ($) =>
      choice(
        prec.left(10, seq(field("left", $._expression), field("operator", choice("*", "/", "%")), field("right", $._expression))),
        prec.left(9, seq(field("left", $._expression), field("operator", choice("+", "-")), field("right", $._expression))),
        prec.left(8, seq(field("left", $._expression), field("operator", choice("<<", ">>")), field("right", $._expression))),
        prec.left(7, seq(field("left", $._expression), field("operator", choice("==", "!=", "EQ", "NE", "<=", ">=", "<", ">", "LE", "GE", "LT", "GT")), field("right", $._expression))),
        prec.left(6, seq(field("left", $._expression), field("operator", "&"), field("right", $._expression))),
        prec.left(5, seq(field("left", $._expression), field("operator", "^"), field("right", $._expression))),
        prec.left(4, seq(field("left", $._expression), field("operator", "|"), field("right", $._expression))),
        prec.left(3, seq(field("left", $._expression), field("operator", choice("AND", "and", "&&")), field("right", $._expression))),
        prec.left(2, seq(field("left", $._expression), field("operator", choice("XOR", "xor")), field("right", $._expression))),
        prec.left(1, seq(field("left", $._expression), field("operator", choice("OR", "or", "||")), field("right", $._expression))),
      ),

    ternary_expression: ($) =>
      prec.right(0, seq(field("condition", $._expression), "?", field("consequence", $._expression), ":", field("alternative", $._expression))),

    // `map` (spec 2.12.11.8) has its own shape unlike a plain function
    // call: a leading expression, then zero or more `key,value;` pairs
    // separated by literal `:`/`,`/`;`, e.g.
    // `map(pushthis:0,10;1,2;3,5;6,8;)`.
    map_expression: ($) =>
      seq(
        "map",
        "(",
        field("condition", $._expression),
        ":",
        repeat(seq(field("key", $._expression), ",", field("value", $._expression), ";")),
        ")",
      ),

    // --- shared literal/value grammar (same design as .dsc/.fdf, minus
    // the empty-value/pipe-list machinery those need for INI-style
    // assignments -- VFR statements are always semicolon-terminated, so
    // there's no analogous "genuinely empty value" case to guard against)

    field: ($) => choice($.array, $.string, $.date, $.time, $.compound_word),

    // The plain-word alternative allows dotted member and bracketed
    // array-index suffixes (in any combination) for qualified varstore
    // references, e.g. `VARIABLE_CLEANUP_DATA.SelectAll`,
    // `MyNameValueVar[0]`, `data.OrderedList[0]` (real usage: `varid =
    // VarStoreName.FieldName` / `VarStoreName[Index]`).
    compound_word: ($) =>
      token(
        /[A-Za-z_][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*|\[[0-9]+\])*|0[xX][0-9A-Fa-f]+|[0-9]+/,
      ),

    array: ($) => seq("{", optional(seq($.field, repeat(seq(",", $.field)))), "}"),

    // `2004/1/1` (date) and `15:33:33` (time) default-value literals.
    identifier: (_$) => /[A-Za-z_][A-Za-z0-9_]*/,

    string: (_$) => token(/L?"[^"\n]*"/),

    comment: (_$) => token(choice(/\/\/[^\n]*/, /\/\*[^*]*\*+([^/*][^*]*\*+)*\//)),
  },
});
